<resources>
    <string name="app_name">Quizzomatic</string>

    <!-- Titles -->
    <string name="title_activity_add_word">Add word</string>
    <string name="title_activity_config_options">Configuration</string>
    <string name="title_activity_error_msg">Error</string>
    <string name="title_activity_list_config_options">Current options</string>
    <string name="title_activity_list_dictionary">Dictionary</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_results">Results</string>
    <string name="title_dialog_modify_word">Modify word</string>

    <!-- Immutable text boxes -->
    <string name="foreign_word_challenge">What is the meaning of this word?</string>
    <string name="textbox_confirm_delete_db">
        If you proceed, your entire database will be deleted, including all the dictionary and
        configuration options. Are you sure this is what you want?"
    </string>
    <string name="textbox_new_word">The new word is ...</string>
    <string name="textbox_new_word_meaning">... and it means ...</string>

    <!-- Button labels -->
    <string name="button_cancel">Cancel</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="check_answer">Check answer</string>
    <string name="delete_db">Cleanup database</string>
    <string name="delete">Delete</string>
    <string name="goto_add_word">Add word to dictionary</string>
    <string name="goto_config">Options</string>
    <string name="goto_quiz">Quiz</string>
    <string name="goto_results">Finish quiz</string>
    <string name="goto_view_dict">My dictionary</string>
    <string name="next_word">Next word</string>
    <string name="change_language">Change language</string>
    <string name="view_options">View current options</string>
    <string name="word_delete">Delete</string>
    <string name="word_modify">Modify</string>

    <!-- Parameters -->
    <string name="param_error">error_msg</string>
    <string name="param_foreign_word">foreign_word</string>
    <string name="param_incorrect">incorrect_words</string>
    <string name="param_n_answered">n_answered</string>
    <string name="param_title">title</string>
    <string name="param_translation">translation</string>

    <!-- Error & info messages -->
    <string name="error_empty_dict">
        Not enough words in the dictionary. Please add some words first until you have at least %1$s.
    </string>
    <string name="error_empty_string">I need a value for %1$s!</string>
    <string name="info_db_deleted">The database has been deleted</string>
    <string name="info_word_saved">Word saved! Now add another word.</string>
    <string name="info_word_exists">The word already exists in the dictionary.</string>
    <string name="info_correct">Correct!</string>
    <string name="info_incorrect">Wrong answer :(\nThe meaning of %1$s is %2$s.</string>
    <string name="info_quiz_result">
        You answered %1$d questions correctly of a total of %2$d.\nYou scored %3$.0f%%
    </string>

    <!-- App option names -->
    <string name="language_learnt">Language being learnt</string>

    <!-- Others -->
    <string name="additional_word_data">score = %1$d</string>
    <string name="translated_word_in_list_dict">(%1$s)</string>
    <string name="header_failed_words">You failed the following words:</string>
    <string name="header_no_failed_words">Congrats!</string>

</resources>
