<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gotoAddWord"
        android:text="@string/goto_add_word" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gotoListDictionary"
        android:text="@string/goto_view_dict" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gotoQuiz"
        android:text="@string/goto_quiz" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gotoOptions"
        android:text="@string/goto_config" />

</LinearLayout>
